--- a/_posts/2023/09/13/2023-09-13-17-27-50-566900-c-and-gis-applications.md
+++ b/_posts/2023/09/13/2023-09-13-17-27-50-566900-c-and-gis-applications.md
@@ -3,7 +3,7 @@ layout: post
 title: "C++ and GIS applications"
 description: " "
 date: 2023-09-13
-tags: [include, include, include]
+tags: [include]
 comments: true
 share: true
 ---
