--- a/_posts/2023/09/13/2023-09-13-17-33-01-636269-deep-learning-with-c-oop.md
+++ b/_posts/2023/09/13/2023-09-13-17-33-01-636269-deep-learning-with-c-oop.md
@@ -3,7 +3,7 @@ layout: post
 title: "Deep learning with C++ OOP"
 description: " "
 date: 2023-09-13
-tags: [include, include, deeplearning, cppoop]
+tags: [include, deeplearning, cppoop]
 comments: true
 share: true
 ---
