--- a/_posts/2023/09/13/2023-09-13-16-49-53-497772-file-io-and-streams-in-c.md
+++ b/_posts/2023/09/13/2023-09-13-16-49-53-497772-file-io-and-streams-in-c.md
@@ -3,7 +3,7 @@ layout: post
 title: "File I/O and streams in C++"
 description: " "
 date: 2023-09-13
-tags: [include, include, include, include, include, include]
+tags: [include]
 comments: true
 share: true
 ---
